# Fakesocks

./: .gitignore  CMakeLists.txt  TCPhandler.cpp  TCPhandler.h  chat_message.hpp  chat_server.cpp  common.cpp  common.h  commonHeaders.h  eventLoop.cpp  eventLoop.h  main.cpp  manager.cpp  proxy.cpp  resolveDNS.cpp  resolveDNS.h  socks4.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
lib/: CMakeLists.txt  big_number.cc  big_number.h  encrypt.cc  encrypt.h  test.cc
